// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviousLeaveDetailsCard renders the component 1`] = `
<Fragment>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "label": "Yes",
          "value": "true",
        },
        Object {
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint="This is the same Employer Identification Number you entered earlier in your application. After you submit your application, we'll give this employer a chance to review information from your application. We won't share any information about leave you took from other employers."
    label="Did you take leave from this employer? EIN: "
    name="previous_leaves_other_reason[0].is_for_current_employer"
    onChange={[Function]}
    smallLabel={true}
    type="radio"
    value=""
  />
  <InputDate
    dayLabel="Day"
    label="What was the first day of this leave?"
    monthLabel="Month"
    name="previous_leaves_other_reason[0].leave_start_date"
    onChange={[Function]}
    smallLabel={true}
    value=""
    yearLabel="Year"
  />
  <InputDate
    dayLabel="Day"
    label="What was the last day of this leave?"
    monthLabel="Month"
    name="previous_leaves_other_reason[0].leave_end_date"
    onChange={[Function]}
    smallLabel={true}
    value=""
    yearLabel="Year"
  />
  <InputHours
    hint="Enter the number of hours you would have worked each week, if you were not on leave. If your weekly schedule was not consistent, enter the average number of hours you would have worked per week. For example, if your leave was across two different weeks, and your normal work schedule was 40 hours in one week and 20 hours in the next, you should enter 30 hours."
    hoursLabel="Hours"
    label="How many hours would you have worked this week if you did not take this leave?"
    minutesIncrement={15}
    minutesLabel="Minutes"
    name="previous_leaves_other_reason[0].worked_per_week_minutes"
    onChange={[Function]}
    smallLabel={true}
    value={null}
  />
  <InputHours
    hint="Add up all the hours you took off between the first and last day of this leave and enter the total. For example, if you took off 8 hours in one week and 12 hours in another, you should enter 20 hours."
    hoursLabel="Hours"
    label="What was the total number of hours you took off?"
    minutesIncrement={15}
    minutesLabel="Minutes"
    name="previous_leaves_other_reason[0].leave_minutes"
    onChange={[Function]}
    smallLabel={true}
    value={null}
  />
</Fragment>
`;

exports[`PreviousLeavesOtherReasonDetails when the user has no previous leaves reported renders the page 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Other leave, benefits, and income"
>
  <Heading
    level="2"
    size="1"
  >
    Tell us about your previous time off
  </Heading>
  <RepeatableFieldset
    addButtonLabel="Add another leave"
    entries={
      Array [
        PreviousLeave {
          "is_for_current_employer": null,
          "is_for_same_reason_as_leave_reason": null,
          "leave_end_date": null,
          "leave_minutes": null,
          "leave_reason": null,
          "leave_start_date": null,
          "previous_leave_id": null,
          "worked_per_week_minutes": null,
        },
      ]
    }
    headingPrefix="Previous leave"
    limit={6}
    limitMessage="You can only add up to 6 leaves"
    onAddClick={[Function]}
    onRemoveClick={[Function]}
    removeButtonLabel="Remove leave"
    render={[Function]}
  />
</QuestionPage>
`;

exports[`PreviousLeavesOtherReasonDetails when user's claim has previous leaves renders the page 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Other leave, benefits, and income"
>
  <Heading
    level="2"
    size="1"
  >
    Tell us about your previous time off
  </Heading>
  <RepeatableFieldset
    addButtonLabel="Add another leave"
    entries={
      Array [
        PreviousLeave {
          "is_for_current_employer": null,
          "is_for_same_reason_as_leave_reason": null,
          "leave_end_date": "2021-01-26",
          "leave_minutes": 25,
          "leave_reason": "Care for a family member",
          "leave_start_date": "2021-01-01",
          "previous_leave_id": 89,
          "worked_per_week_minutes": 40,
        },
        PreviousLeave {
          "is_for_current_employer": null,
          "is_for_same_reason_as_leave_reason": null,
          "leave_end_date": "2020-12-13",
          "leave_minutes": 20,
          "leave_reason": "Child bonding",
          "leave_start_date": "2020-11-21",
          "previous_leave_id": 9,
          "worked_per_week_minutes": 40,
        },
      ]
    }
    headingPrefix="Previous leave"
    limit={6}
    limitMessage="You can only add up to 6 leaves"
    onAddClick={[Function]}
    onRemoveClick={[Function]}
    removeButtonLabel="Remove leave"
    render={[Function]}
  />
</QuestionPage>
`;
